<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_custom_upstart</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="petervarga0018@gmail.com">petervar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>nav2_simple_commander</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- <depend>python3-cv-bridge</depend> -->
  <depend>python3-numpy</depend>
  <depend>python3-pyproj</depend>
  <depend>python3-requests</depend>
  <depend>python3-transforms3d</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>ament_python</build_type>
  </export>
</package>
