<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot4_custom_upstart</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="petervarga0018@gmail.com">Péter Varga</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>turtlebot4_bringup</depend>
  <depend>turtlebot4_diagnostics</depend>
  <depend>turtlebot4_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
